--- a/california.html
+++ b/california.html
@@ -21,10 +21,10 @@
             <h2>About California'a Diverse Species</h2>
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree, 
                 Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
-            <iframe src="nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
+            <iframe src="static_plots/nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
 
             <h3>Vouchers and References</h3>
-            <iframe src="boxplot.png" width="100%" height="600"></iframe>
+            <img src="static_plots/boxplot.png" alt="Box Plot" width="600">
             <p>This boxplot visualization displays the combined counts of vouchers and references across various 
                 categories in the three national parks. The visualization highlights variations in species documentation 
                 across parks and categories. The boxplot also has zero outliers because they may indicate gaps in species 
@@ -35,11 +35,11 @@
             </p>
 
             <h3>species family</h3>
-            <iframe src="unique_species.html" width="100%" height="600"></iframe>
+            <img src="static_plots/species_richness_graph.png" alt="Unique Species" width="1000"></img>
             <p> something about this plot</p>
 
             <h3>species richnes by abundance</h3>
-            <iframe src="species_richness_by_abundance.png" width="100%" height="600"></iframe>
+            <img src="species_richness_by_abundance.png" alt="Species by Abundance" width="1000"></img>
             <p> something about this plot</p>
     </main>
 
