fixed width and centered

--- a/california.html
+++ b/california.html
@@ -24,7 +24,7 @@
             <iframe src="static_plots/nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
 
             <h3>Vouchers and References</h3>
-            <img src="static_plots/boxplot.png" alt="Box Plot" width="600">
+            <img src="static_plots/boxplot.png" alt="Box Plot" class="center">
             <p>This boxplot visualization displays the combined counts of vouchers and references across various 
                 categories in the three national parks. The visualization highlights variations in species documentation 
                 across parks and categories. The boxplot also has zero outliers because they may indicate gaps in species 
@@ -35,11 +35,11 @@
             </p>
 
             <h3>species family</h3>
-            <img src="static_plots/species_richness_graph.png" alt="Unique Species" width="1000"></img>
+            <img src="static_plots/species_richness_graph.png" alt="Unique Species" class="center"></img>
             <p> something about this plot</p>
 
             <h3>species richnes by abundance</h3>
-            <img src="species_richness_by_abundance.png" alt="Species by Abundance" width="1000"></img>
+            <img src="species_richness_by_abundance.png" alt="Species by Abundance" class="center"></img>
             <p> something about this plot</p>
     </main>
 
