--- a/california.html
+++ b/california.html
@@ -21,7 +21,7 @@
             <h2>About California'a Diverse Species</h2>
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree, 
                 Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
-            <iframe src="static_plots/nidhi-d3/d3-plot.html" width="1000" height="600"></iframe>
+            <img src="static_plots/d3_barplot.png" class="center" height="600">
 
             <h3>Vouchers and References</h3>
             <img src="static_plots/boxplot.png" alt="Box Plot" class="center">
@@ -35,11 +35,11 @@
             </p>
 
             <h3>species family</h3>
-            <img src="static_plots/species_richness_graph.png" alt="Unique Species" class="center"></img>
+            <img src="static_plots/species_richness_graph.png" alt="Unique Species" class="center" height="600">
             <p> something about this plot</p>
 
             <h3>species richnes by abundance</h3>
-            <img src="species_richness_by_abundance.png" alt="Species by Abundance" class="center"></img>
+            <img src="species_richness_by_abundance.png" alt="Species by Abundance" class="center" height="600">
             <p> something about this plot</p>
     </main>
 
