--- a/california.html
+++ b/california.html
@@ -21,8 +21,10 @@
             <h2>About California'a Diverse Species</h2>
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree, 
                 Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
-            <img src="static_plots/d3_barplot.png" class="center" height="600">
-
+                <div class="center">
+                    <img src="static_plots/d3_barplot.png" class="center" width="100%">
+                </div>
+            
             <h3>Vouchers and References</h3>
             <img src="static_plots/boxplot.png" alt="Box Plot" class="center">
             <p>This boxplot visualization displays the combined counts of vouchers and references across various 
@@ -35,11 +37,15 @@
             </p>
 
             <h3>species family</h3>
-            <img src="static_plots/species_richness_graph.png" alt="Unique Species" class="center" height="600">
+            <div class="center">
+                <img src="static_plots/species_richness_graph.png" alt="Unique Species" class="center" width="100%">
+            </div>
             <p> something about this plot</p>
 
             <h3>species richnes by abundance</h3>
-            <img src="species_richness_by_abundance.png" alt="Species by Abundance" class="center" height="600">
+            <div class="center">
+                <img src="static_plots/species_richness_by_abundance.png" alt="Species by Abundance" class="center" width="100%">
+            </div>
             <p> something about this plot</p>
     </main>
 
