--- a/california.html
+++ b/california.html
@@ -23,7 +23,7 @@
             <h2>About California'a Diverse Species</h2>
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree,
                 Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
-            <img src="static_plots/d3_barplot.png">
+            <img src="static_plots/d3_barplot.png" alt="d3">
 
             <p>This bar chart’s data is categorized into six groups: amphibian, bird, fish, mammal, reptile, and
                 vascular plant. It’s evident through this visualization that the Vascular Plant category dominates
@@ -54,7 +54,7 @@
             </p>
 
             <h3>species family</h3>
-            <img src="static_plots/species_richness_graph.png" alt="Unique Species">
+            <img src="static_plots/species_richness.png" alt="Unique Species">
 
             <p> This plot visualizes a high level </p>
 
