--- a/invasive.html
+++ b/invasive.html
@@ -24,7 +24,7 @@
             <p>This page explores the abundance and nativeness of species in California's National Parks, allowing us to
                 explore how this plays into biodiversity and th preservation of these parks' ecosystems.</p>
             <h4>Abundance and Nativeness</h4>
-            <iframe src="heatmap.html" width="100%" height="500"></iframe>
+            <iframe src="heatmap.html" width="100%" height="500" frameborder="0"></iframe>
             <p>This interactive heatmap shows use the species count data categorized by abundance and nativeness between the three parks. 
                 Users can toggle between radio buttons to show the species count, abundance, and nativeness of each park. The x-axis represents the abundance 
                 categories, while the y-axis represents nativeness. The blue color gradient indicates the number of species with the combinations of abundance and 
@@ -33,7 +33,7 @@
                 valueable when exploring the biodiversity data in a way that provides more granular insights, facilitating better-informed decision-making for conservation 
                 and management efforts. The efforts can then be placed in areas where it seems an invasive species may be dominating the area, and to help preserve the ecosystem. 
             </p>
-            <iframe src="park_species_interactive_abundance_chart.html" width = "100%" height = "600"></iframe>
+            <iframe src="park_species_interactive_abundance_chart.html" width = "100%" height = "600" frameborder="0"></iframe>
             <p>In this visualization we are examining the total species count across abundance categories for three national parks.
                 The stacked bar chart and scatter plot categorizes species by abundance levels, such as abundant, common, occasional, rare
                 uncommon, and unknown. Each bar segment represents the contribution of each species counts from individual parks which offer a 
@@ -47,7 +47,7 @@
                 species before they spread. 
             </p>
             <h4>A Closer Look</h4>
-            <iframe src="sankey.html" width="100%" height="600"></iframe>
+            <iframe src="sankey.html" width="100%" height="600"frameborder="0"></iframe>
             <p>A summary for your findings, including what you have learned from the data visualization and what can be
                 done in the future.</p>
             <p>add something about weaknesses and limitations on this page</p>
