--- a/invasive.html
+++ b/invasive.html
@@ -25,29 +25,25 @@
                 explore how this plays into biodiversity and th preservation of these parks' ecosystems.</p>
             <h4>Abundance and Nativeness</h4>
             <iframe src="heatmap.html" width="100%" height="500" frameborder="0"></iframe>
-            <p>This interactive heatmap shows use the species count data categorized by abundance and nativeness between the three parks. 
-                Users can toggle between radio buttons to show the species count, abundance, and nativeness of each park. The x-axis represents the abundance 
-                categories, while the y-axis represents nativeness. The blue color gradient indicates the number of species with the combinations of abundance and 
-                nativeness, allowing users to quickly identify areas which high or low species counts, providing a visual representation of the species 
-                distribution. This intersection of abundance and nativeness for each park offers a detailed categorical view of the species distribution. This is 
-                valueable when exploring the biodiversity data in a way that provides more granular insights, facilitating better-informed decision-making for conservation 
-                and management efforts. The efforts can then be placed in areas where it seems an invasive species may be dominating the area, and to help preserve the ecosystem. 
-            </p>
-            <iframe src="park_species_interactive_abundance_chart.html" width = "100%" height = "600" frameborder="0"></iframe>
-            <p>In this visualization we are examining the total species count across abundance categories for three national parks.
-                The stacked bar chart and scatter plot categorizes species by abundance levels, such as abundant, common, occasional, rare
-                uncommon, and unknown. Each bar segment represents the contribution of each species counts from individual parks which offer a 
-                comparative view of biodiversity throughout these parks.
-            </p>
-            <p> The patterns displayed in this graph could help identify potential invasive species, because invasive species often exhibit 
-                irregular abundance patterns. They may suddenly appear in abundant or occasional categories when they were previously 
-                absent or underrepresented. This visualization allows for park managers and ecologists to monitor the shifts in species abundance,
-                which can act as an early indicator of invasive species disrupting ecosystems. By focusing on abundance anomolies or unexplained 
-                increses in certain categories, stakeholders can prioritize further investigation and create targeted strategies to manage invasive 
-                species before they spread. 
+            <p>This interactive heatmap shows use the species count data categorized by abundance and nativeness between
+                the three parks.
+                Users can toggle between radio buttons to show the species count, abundance, and nativeness for each
+                park. The x-axis represents the abundance
+                categories, while the y-axis represents nativeness. The blue color gradient indicates the number of
+                species corresponding to each combination of abundance and
+                nativeness, allowing users to easily identify areas with high or low species counts. This intersection
+                of abundance and nativeness provides a detailed, categorical view of species distribution, offering
+                valuable insights for biodiversity analysis.
+                By highlighting patterns in species distribution, the
+                heatmap helps inform conservation and management efforts, particularly in areas where invasive species
+                may be dominating. Invasive species often display irregular abundance patterns, such as appearing
+                suddenly in previously underrepresented categories, and this visualization can act as an early warning
+                system for such disruptions. By focusing on anomalies or unexplained increases in abundance, park
+                managers and ecologists can prioritize further investigation and develop targeted strategies to control
+                invasive species before they spread, supporting ecosystem preservation.
             </p>
             <h4>A Closer Look</h4>
-            <iframe src="sankey.html" width="100%" height="600"frameborder="0"></iframe>
+            <iframe src="sankey.html" width="100%" height="600" frameborder="0"></iframe>
             <p>A summary for your findings, including what you have learned from the data visualization and what can be
                 done in the future.</p>
             <p>add something about weaknesses and limitations on this page</p>
