--- a/california.html
+++ b/california.html
@@ -20,13 +20,14 @@
 
     <main>
         <section>
-            <h2>About California'a Diverse Species</h2>
+            <h2>About California's Diverse Species</h2>
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree,
-                Sequoia/Kings Canyon, and Redwood National Parks. Below is a look at ... [FINISH THIS]</p>
+                Sequoia/Kings Canyon, and Redwood National Parks. Take a look at some interesting plots relating to 
+                biodiversity that reveal fascinating things about the NPSpecies data!</p>
             <img src="static_plots/d3_barplot.png" alt="d3">
 
-            <p>This bar chart’s data is categorized into six groups: amphibian, bird, fish, mammal, reptile, and
-                vascular plant. It’s evident through this visualization that the Vascular Plant category dominates
+            <p>The species in this data are categorized into six groups: amphibian, bird, fish, mammal, reptile, and
+                vascular plant. It is evident through this visualization that the Vascular Plant category dominates
                 the rest of the graph. It has the largest number of species across all three parks, with the
                 vascular plant family having over 1400 unique species in Sequoia and Kings Canyon National
                 Park. The bird family is the next most populated, with all three parks having comparable
@@ -61,11 +62,11 @@
             <h3>species richnes by abundance</h3>
             <img src="static_plots/species_richness_by_abundance.png" alt="Species by Abundance">
             
-            <p> This bar chart’s data is categorized into abundant, common, occasional, rare, uncommon, and
+            <p> The species in the NPSpecies data are also categorized into abundant, common, occasional, rare, uncommon, and
                 unknown. The common category is the only category with all 3 national parks having over 200
                 unique species. For the uncommon category, the graph reaches its peak, as Sequoia and Kings
                 National Park has the most with over 800 unique species. In addition, Redwood National Park
-                has an interestingly high amount of unknown unique species, as it doesn’t know the abundance
+                has an interestingly high amount of unknown unique species, as it does not know the abundance
                 of over 400 unique species. The low amount of values for all 3 national parks in the abundant
                 category indicates that there aren't many species that are common and abundant everywhere.</p>
     </main>
