--- a/invasive.html
+++ b/invasive.html
@@ -40,8 +40,7 @@
                 suddenly in previously underrepresented categories, and this visualization can act as an early warning
                 system for such disruptions. By focusing on anomalies or unexplained increases in abundance, park
                 managers and ecologists can prioritize further investigation and develop targeted strategies to control
-                invasive species before they spread, supporting ecosystem preservation.
-            </p>
+                invasive species before they spread, supporting ecosystem preservation.</p>
             <h4>A Closer Look</h4>
             <iframe src="sankey.html" width="100%" height="600" frameborder="0"></iframe>
             <p>A summary for your findings, including what you have learned from the data visualization and what can be
