--- a/invasive.html
+++ b/invasive.html
@@ -43,9 +43,19 @@
                 invasive species before they spread, supporting ecosystem preservation.</p>
             <h4>A Closer Look</h4>
             <iframe src="sankey.html" width="100%" height="600" frameborder="0"></iframe>
-            <p>A summary for your findings, including what you have learned from the data visualization and what can be
-                done in the future.</p>
-            <p>add something about weaknesses and limitations on this page</p>
+            <p>This Sankey Diagram takes a closer look at abundance and nativeness by zooming into which orders are both
+                abundant and non-native. Orders are one level of the Linnaeus classification system that is used to
+                classify animals into a hierarchical tree. The Sankey Diagram looks at these orders and connects them to
+                which category they are in, as well as which park they come from (these are the nodes). This plot is
+                also interactive- the user can click nodes to highlight the connected edges, hover over the nodes to get
+                more information, and even drag around the nodes to better visualize whatever aspect they want to dig
+                deeper
+                into. What we can learn from this visualization is that most of the non-native and abundant/common
+                species
+                are Vascular Plants, specifically those from the Poales order. Poales are flowering plants and includes
+                plants such as various grasses. This tells us that if these national parks want to limit any invasive
+                species, this is one place they could start. This could be especially important because Poales can have
+                negative effects on wildlife, water cycles, and the economy by disrupting agriculture.</p>
     </main>
 
     <footer>
