--- a/california.html
+++ b/california.html
@@ -22,7 +22,7 @@
         <section>
             <h2>About California's Diverse Species</h2>
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree,
-                Sequoia/Kings Canyon, and Redwood National Parks. Take a look at some interesting plots relating to 
+                Sequoia/Kings Canyon, and Redwood National Parks. Take a look at some interesting plots relating to
                 biodiversity that reveal fascinating things about the NPSpecies data!</p>
             <img src="static_plots/d3_barplot.png" alt="d3">
 
@@ -57,12 +57,19 @@
             <h3>species family</h3>
             <img src="static_plots/species_richness.png" alt="Unique Species">
 
-            <p> This plot visualizes a high level </p>
+            <p> This plot visualizes, at a high level, the distribution of unique species in these three national parks.
+                As we can see, Joshua Tree has the least while Sequoia has the most. This tells us that even within
+                California, these are differences in species richness between national parks. Another thing that this
+                tells us about biodiversity in California is that Sequoia National Park may span a broader range
+                different ecosystems, which allows for a greater diversity of species. In contrast, Joshua Tree
+                National Park is mostly situated in desert regions with a more arid climate, which limits the variety
+                of species that can survive.</p>
 
             <h3>species richnes by abundance</h3>
             <img src="static_plots/species_richness_by_abundance.png" alt="Species by Abundance">
-            
-            <p> The species in the NPSpecies data are also categorized into abundant, common, occasional, rare, uncommon, and
+
+            <p> The species in the NPSpecies data are also categorized into abundant, common, occasional, rare,
+                uncommon, and
                 unknown. The common category is the only category with all 3 national parks having over 200
                 unique species. For the uncommon category, the graph reaches its peak, as Sequoia and Kings
                 National Park has the most with over 800 unique species. In addition, Redwood National Park
