--- a/california.html
+++ b/california.html
@@ -24,6 +24,19 @@
             <p>This page highlights the vast biodiversity in the 3 selected national parks: Joshua Tree,
                 Sequoia/Kings Canyon, and Redwood National Parks. Take a look at some interesting plots relating to
                 biodiversity that reveal fascinating things about the NPSpecies data!</p>
+
+            <h3>Species Richness in our 3 Parks</h3>
+            <img src="static_plots/species_richness.png" alt="Unique Species">
+
+            <p>This plot introduces, at a high level, the distribution of unique species in these three national parks.
+                As we can see, Joshua Tree has the least while Sequoia has the most. This tells us that even within
+                California, these are differences in species richness between national parks. Another thing that this
+                tells us about biodiversity in California is that Sequoia National Park may span a broader range
+                different ecosystems, which allows for a greater diversity of species. In contrast, Joshua Tree
+                National Park is mostly situated in desert regions with a more arid climate, which limits the variety
+                of species that can survive.</p>
+
+            <h3>A Closer Look at Species Category in our Parks</h3>
             <img src="static_plots/d3_barplot.png" alt="d3">
 
             <p>The species in this data are categorized into six groups: amphibian, bird, fish, mammal, reptile, and
@@ -54,18 +67,7 @@
                 research or conservation efforts to ensure comprehensive biodiversity records.
             </p>
 
-            <h3>species family</h3>
-            <img src="static_plots/species_richness.png" alt="Unique Species">
-
-            <p> This plot visualizes, at a high level, the distribution of unique species in these three national parks.
-                As we can see, Joshua Tree has the least while Sequoia has the most. This tells us that even within
-                California, these are differences in species richness between national parks. Another thing that this
-                tells us about biodiversity in California is that Sequoia National Park may span a broader range
-                different ecosystems, which allows for a greater diversity of species. In contrast, Joshua Tree
-                National Park is mostly situated in desert regions with a more arid climate, which limits the variety
-                of species that can survive.</p>
-
-            <h3>species richnes by abundance</h3>
+            <h3>Species Abundance</h3>
             <img src="static_plots/species_richness_by_abundance.png" alt="Species by Abundance">
 
             <p> The species in the NPSpecies data are also categorized into abundant, common, occasional, rare,
