--- a/index.html
+++ b/index.html
@@ -67,23 +67,21 @@
                 <li>Park Code: National park abbreviation. </li>
                 <li>Park Name: National park name </li>
                 <li>Category: High-level taxonomic grouping</li>
-                <li>Category Sort:  </li> 
+                <li>Category Sort: Organizing species into hierarchical or categorical groups based on shared characteristics or attributes. </li> 
                 <li>Order: Taxonomic </li>
                 <li>Family: Taxonomic family </li>
                 <li>Taxon Code: Unique code to categorize and classify different species</li>
                 <li>TSN: Taxonomic Serial Number: a unique taxon identifier used by the Integrated Taxonomic
                     Information System.</li>
-                <li>Taxon Record Status: </li>
                 <li>Scientific Name: Scientific name used by national park. </li>
                 <li>Common Names: Common name preferred by park, or common name from ITIS </li>
                 <li>Synonyms: A scientific name used to identify the park species in the past, or that may be used in
                     other regions or by other taxonomic classification systems. </li>
                 <li>Park Accepted: Designation that a species scientific name is preferred by the park. </li>
-                <li>Sens?: </li>
-                <li>Record Status: </li> 
+                <li>Record Status: The current state or condition of a species record within a database</li> 
                 <li>Occurrence: A designation given to park species records that describes a park’s knowledge of a
                     species’ presence in the park.</li>
-                <li>Nativeness: </li>
+                <li>Nativeness: Determines if an organism is native, non-native, or unknown to a park</li>
                 <li>Abundance: The amount of </li>
                 <li>NPS Tags: A designation given to a park species, or that acts as a modifier for another species
                     attribute</li>
@@ -100,10 +98,52 @@
                     its range </li>
                 <li>SRank: State Rank – an assessment of the rarity or abundance of a taxon within a state. </li>
             </ul>
-            <p>dont forget: At least two links to the references. </p>
+            <h3>Check out Similar Research!</h3>
+            <p>The first paper <a href="https://bioone.org/journals/natural-areas-journal/volume-44/issue-3/2162-4399-44.3.157/Integrating-Ecological-Value-and-Charismatic-Species-Habitats-to-Prioritize-Habitats/10.3375/2162-4399-44.3.157.short"> 
+                linked here
+            </a> describes an ongoing debate regarding which natural ecosystems to protect and to what extent they should be protected. The paper asserts that local stakeholders should determine and prioritize which natural habitats should be conserved by measuring the levels of biodiversity, natural vegetation, and ecological value in the Greater Yellowstone Ecosystem. The hope is to create national conservation plans that are made more effective by incorporating these analyses of biodiversity elements. This paper ultimately calls for increased analyses and studies on biodiversity like the work we plan on doing for this project.
+                </p>
+            
+            <p> The second paper <a href="https://link.springer.com/article/10.1007/s10531-015-0941-5">linked here </a> highlights an additional reason for why studying and preserving biodiversity in national parks is beneficial. The Finnish study found that national parks with high biodiversity values were more attractive for visitors than parks with lower biodiversity, and the number of annual visits was positively associated with the number of different habitat types and species. Thus, not only does the ecological environment improve for all species and humans, but biodiversity also increases the natural aesthetics of the park and attracts more visitors, which the national parks depend upon for revenue. This provides an additional reason why projects such as ours that focus on biodiversity in national parks can be beneficial.</p>
+            <h3>Research Papers</h3>
+            <ul>
+                <li> <a href="https://bioone.org/journals/natural-areas-journal/volume-44/issue-3/2162-4399-44.3.157/Integrating-Ecological-Value-and-Charismatic-Species-Habitats-to-Prioritize-Habitats/10.3375/2162-4399-44.3.157.short"> 
+                    Integrating Ecological Value and Charismatic Species Habitats to Prioritize Habitats for Conservation: A Case Study from Greater Yellowstone
+                </a></li>
+                <li> <a href="https://link.springer.com/article/10.1007/s10531-015-0941-5">Biodiversity attracts visitors to national parks </a></li>
+            </ul>
 
         </section>
 
+        <section>
+            <h3>Conclusion</h3>
+            <p>Calfornia's national parks have rich biodiversity, but there are still large gaps in species documentation. These gaps are concerning because 
+                thorough documentation is crucial in identifying and addressing the presence of invasive species, that pose a serious threat to ecosystems and native 
+                biodiversity. Protecting these parks requires ongoing efforts to monitor species diversity, abundance, and distribution.
+            </p>
+            <ul>
+                <li>Species Count Across Parks by Category: Shows that all three parks have the highest amount of unique vascular plants.  </li>
+                <li>Combined Vouchers and References by Park and Category: Redwood National Park shows a broader spread of combined vouchers and references counts across species 
+                    categories, suggesting a more balanced distribution of recorded species.
+                </li>
+                <li>Species Family: Sequoia and Kings Canyon National Park has the highest number of species richness</li>
+                <li>Species Richness by Abundance in National Parks: Redwood National Park has a large amount of unknown species</li>
+                <li>Heatmap of Species Count by Abundance and Nativeness: Joshua Tree National Park has the most common native species, suggesting ecosystem stability. 
+                    In contrast, Redwood National Park has a high number of Unknown species, making an unknown treat of invasive species more likely. </li>
+                <li>Non-Native Abundant Species: </li>
+            </ul>
+            <p>These visualizations show the urgent need to improve species documentation in Calfornia's national parks to protect their biodiversity
+                and address and mitigate threats of invasive species. By identifying these threats, park rangers and managers can better preserve the ecological balance, maintian species 
+                richness, and ensure the long-term heald and resilience of these vital natural areas for everyone to enjoy for many more years to come. 
+            </p>
+        </section>
+
+        <section>
+            <h3>Future Modifications</h3>
+            <p></p>
+
+        </section>
+        
         <section>
             <h3>Contact the Creators!</h3>
             <ul>
